<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.drawer.MenuDrawer">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorPrimary"
                android:gravity="bottom"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size" />

            <TextView
                android:id="@+id/my_amiibos"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawableLeft="@drawable/amiibo_icon"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/amiibo_icon"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:text="@string/menu_drawer_my_amiibos" />

            <TextView
                android:id="@+id/sync_drive"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawableLeft="@drawable/google_drive_icon"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/google_drive_icon"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:text="@string/menu_drawer_sync_drive" />
        </LinearLayout>

        <TextView
            android:id="@+id/twitter"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?android:attr/selectableItemBackground"
            android:drawableLeft="@drawable/twitter_circle_black_512"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/twitter_circle_black_512"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/menu_drawer_twitter" />

        <TextView
            android:id="@+id/github"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?android:attr/selectableItemBackground"
            android:drawableLeft="@drawable/github_mark"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/github_mark"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/menu_drawer_github" />

        <TextView
            android:id="@+id/website"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?android:attr/selectableItemBackground"
            android:drawableLeft="@drawable/website"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/website"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/menu_drawer_website" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/menu_drawer_legal"
            android:textSize="12sp" />
    </LinearLayout>
</ScrollView>
